add_subdirectory(aes)
add_subdirectory(cipher)
add_subdirectory(hash)
add_subdirectory(pkey)
add_subdirectory(psa)
add_subdirectory(random)
add_subdirectory(util)

if(ENABLE_TESTING)
    if (NOT WIN32)
        add_subdirectory(fuzz)
    endif()
    add_subdirectory(ssl)
    add_subdirectory(test)
    add_subdirectory(x509)
endif()
